# areg-sdk-demo

./: .gitignore  CMakeLists.txt  README.md  areg-sdk-demo.sln  msvc_setup.props
.github/workflows/: Test.yml  cmake-areg-opt.yml  cmake-linux-cc.yml  cmake.yml  codeql.yml  msbuild.yml
demo/: CMakeLists.txt  README.md  demo_generate.bat
demo/01_minimalrpc/: 01_generated.vcxproj  01_generated.vcxproj.filters  CMakeLists.txt
demo/01_minimalrpc/src/: main.cpp
demo/02_minimalipc/: 02_generated.vcxproj  02_generated.vcxproj.filters  CMakeLists.txt
demo/02_minimalipc/src/: consumeripc.cpp  provideripc.cpp
demo/03_helloservice/: 03_generated.vcxproj  03_generated.vcxproj.filters  CMakeLists.txt
demo/03_helloservice/common/src/: ClientComponent.hpp  ServiceComponent.cpp  ServiceComponent.hpp
demo/04_logging/src/: main.cpp
demo/05_timer/src/: main.cpp
demo/10_locsvc/: 10_generated.vcxproj  10_generated.vcxproj.filters  CMakeLists.txt
demo/10_locsvc/locservice/src/: ServiceClient.cpp  ServiceClient.hpp  ServicingComponent.cpp  ServicingComponent.hpp  main.cpp
demo/12_pubsvc/: 12_generated.vcxproj  12_generated.vcxproj.filters  CMakeLists.txt
demo/12_pubsvc/pubclient/src/: ServiceClient.cpp  ServiceClient.hpp  main.cpp
demo/12_pubsvc/pubservice/src/: ServicingComponent.cpp  ServicingComponent.hpp  main.cpp
demo/13_locsvc/: 13_generated.vcxproj  13_generated.vcxproj.filters  CMakeLists.txt
demo/13_locsvc/locservice/src/: ServiceClient.cpp  ServiceClient.hpp  ServicingComponent.cpp  ServicingComponent.hpp
demo/15_pubsvc/: 15_generated.vcxproj  15_generated.vcxproj.filters  CMakeLists.txt
demo/15_pubsvc/pubclient/src/: ServiceClient.cpp  ServiceClient.hpp
demo/15_pubsvc/pubservice/src/: ServicingComponent.cpp  ServicingComponent.hpp
demo/16_pubfsm/: 16_generated.vcxproj  16_generated.vcxproj.filters  CMakeLists.txt
demo/16_pubfsm/common/: NECommon.hpp
demo/16_pubfsm/pubclient/src/: TrafficLightClient.cpp  TrafficLightClient.hpp
demo/16_pubfsm/pubservice/src/: PowerControllerClient.cpp  PowerControllerClient.hpp  TrafficLightService.cpp  TrafficLightService.hpp
demo/17_winchat/: 17_generated.vcxproj  17_generated.vcxproj.filters  CMakeLists.txt
demo/17_winchat/chatter/: NEDistributedApp.cpp
demo/17_winchat/chatter/services/: CentralMessaging.cpp  CentralMessaging.hpp  ConnectionHandler.cpp  ConnectionList.hpp  DirectChatService.hpp  DirectConnectionClient.hpp  DirectConnectionService.hpp  DirectMessagingClient.hpp  NetworkSetup.hpp
demo/17_winchat/chatter/ui/: DistributedDialog.cpp  PageChat.hpp  PageConnections.hpp  PageMessaging.hpp  PageNetworkSetup.hpp
demo/17_winchat/register/services/: ConnectionManager.hpp
demo/17_winchat/services/: CentralMessager.siml  ConnectionManager.siml  DirectConnection.siml  DirectMessager.siml
demo/19_pubfsm/: 19_generated.vcxproj  19_generated.vcxproj.filters  CMakeLists.txt
demo/19_pubfsm/common/: NECommon.hpp
demo/19_pubfsm/pubclient/src/: TrafficLightClient.hpp
demo/19_pubfsm/pubservice/src/: PowerControllerClient.hpp  TrafficLightService.cpp  TrafficLightService.hpp
demo/19_pubwatchdog/: 19_generated.vcxproj  19_generated.vcxproj.filters  CMakeLists.txt
demo/19_pubwatchdog/pubclient/src/: ServiceClient.cpp  ServiceClient.hpp  main.cpp
demo/19_pubwatchdog/pubservice/src/: ServicingComponent.cpp  ServicingComponent.hpp  main.cpp
demo/20_winchat/: 20_generated.vcxproj  20_generated.vcxproj.filters  CMakeLists.txt
demo/20_winchat/chatter/: NEDistributedApp.cpp
demo/20_winchat/chatter/services/: CentralMessaging.cpp  CentralMessaging.hpp  ConnectionHandler.cpp  ConnectionList.hpp  DirectChatService.hpp  DirectConnectionClient.hpp  DirectConnectionService.hpp  DirectMessagingClient.hpp  NetworkSetup.hpp
demo/20_winchat/chatter/ui/: DistributedDialog.cpp  PageChat.hpp  PageConnections.hpp  PageMessaging.hpp  PageNetworkSetup.hpp
demo/20_winchat/register/services/: ConnectionManager.hpp
demo/21_pubunblock/: 21_generated.vcxproj  21_generated.vcxproj.filters  CMakeLists.txt
demo/21_pubunblock/pubclient/src/: ServiceClient.cpp  ServiceClient.hpp  main.cpp
demo/21_pubunblock/pubservice/src/: ServiceComponent.cpp  ServiceComponent.hpp  main.cpp
demo/22_pubwatchdog/: 22_generated.vcxproj  22_generated.vcxproj.filters  CMakeLists.txt
demo/22_pubwatchdog/pubclient/src/: ServiceClient.cpp  ServiceClient.hpp
demo/22_pubwatchdog/pubservice/src/: ServicingComponent.cpp  ServicingComponent.hpp  main.cpp
demo/23_pubsubmix/: 23_generated.vcxproj  23_generated.vcxproj.filters  CMakeLists.txt
demo/23_pubsubmix/common/src/: NECommon.hpp  PubSubMixed.cpp  PubSubMixed.hpp  Publisher.cpp  Publisher.hpp  Subscriber.cpp  Subscriber.hpp
demo/23_pubsubmix/pubsubctrl/src/: PubSubController.cpp  PubSubController.hpp  main.cpp
demo/23_pubsubmix/pubsubdyn/src/: main.cpp
demo/24_pubunblock/: 24_generated.vcxproj  24_generated.vcxproj.filters  CMakeLists.txt
demo/24_pubunblock/pubclient/src/: ServiceClient.cpp  ServiceClient.hpp
demo/24_pubunblock/pubservice/src/: ServiceComponent.cpp  ServiceComponent.hpp
demo/26_pubsubmix/: 26_generated.vcxproj  26_generated.vcxproj.filters  CMakeLists.txt
demo/26_pubsubmix/common/src/: PubSubMixed.cpp  PubSubMixed.hpp  Publisher.hpp  Subscriber.hpp
demo/26_pubsubmix/pubsubctrl/src/: PubSubController.cpp  PubSubController.hpp
demo/dummy/: ReadMe.md  dummy.cpp  dummy.vcxproj  dummy.vcxproj.filters
toolchains/: clang-linux-arm32.cmake  clang-linux-arm64.cmake  clang-linux-x64.cmake  clang-linux-x86.cmake  clang-win-x64.cmake  clang-win-x86.cmake  gnu-linux-arm32.cmake  gnu-linux-arm64.cmake  gnu-linux-x64.cmake  gnu-linux-x86.cmake  msvc-win-x64.cmake  msvc-win-x86.cmake
